fixed zooming automatically on safari

--- a/style.scss
+++ b/style.scss
@@ -9,10 +9,12 @@ body {
   display: grid;
   place-content: center;
   height: 80dvh;
+  width: 100vw;
 }
 
 container {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   gap: 0.75rem;
